# madr

./: README.md  pyproject.toml
app/: main.py
app/core/: security.py
app/db/: session.py
app/dependencies/: auth.py
app/models/: __init__.py  author.py  book.py  conta.py  user.py
app/repositories/: author_repository.py  book_repository.py  conta_repository.py  user_repository.py
app/routers/: auth.py  author.py  book.py  contas.py  user.py
app/schemas/: author.py  book.py  conta.py  user.py
app/services/: auth_service.py  author_service.py  book_service.py  conta_service.py  user_service.py
migrations/: env.py
migrations/versions/: 25b2ee4cd9d3_create_contas_table.py  34375e9bb92a_rename_contas_to_users.py  3d12e3c01c15_create_contas_table.py  c8d91e89a14f_create_book_table.py  d2ba38d56e45_create_authors_table.py
src/madr/: main.py
src/madr/db/: registry.py  session.py
src/madr/models/: conta.py
src/madr/routers/: contas.py
tests/: conftest.py  test_book.py  test_db.py  test_recurity.py  test_security.py  test_user.py
